fix slide bar on firefox

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    white-space: nowrap;
   }
 
 nav {
